--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background: #000 url('https://images.unsplash.com/photo-1521334884684-d80222895322?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+      background: #000 url('https://i.imgur.com/Mk4QP26.png') center/cover no-repeat;
       min-height: 100vh;
       color: #fff;
     }
@@ -80,7 +80,7 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix logo">
+  <img class="logo" src="https://i.imgur.com/9QLXNMs.png" alt="Netflix logo">
   <div class="container">
     <h1>Inicia sesión</h1>
     <form>
@@ -93,7 +93,7 @@
       </div>
     </form>
     <div class="signup">
-      ¿Nuevo en Netflix? <a href="#">Suscríbete ahora</a>.
+      ¿Nuevo en Marketflix? <a href="#">Suscríbete ahora</a>.
     </div>
     <div class="recaptcha">
       Esta página está protegida por Google reCAPTCHA para asegurarnos de que no eres un robot. <a href="#">Más información</a>.
