--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@
       background: #000 url('https://i.imgur.com/Mk4QP26.png') center/cover no-repeat;
       min-height: 100vh;
       color: #fff;
+      position: relative;
+    }
+
+    /* Capa negra encima del fondo */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4); /* oscurece el fondo */
+      z-index: 0;
     }
 
     .logo {
       width: 140px;
       margin: 20px;
+      position: relative;
+      z-index: 1;
     }
 
     .container {
@@ -28,6 +43,8 @@
       margin: 60px auto;
       padding: 40px 30px;
       border-radius: 4px;
+      position: relative;
+      z-index: 1;
     }
 
     .container h1 {
@@ -94,7 +111,7 @@
       text-decoration: none;
     }
 
-    /* Responsive: Ajuste en pantallas pequeñas */
+    /* Responsive */
     @media (max-width: 480px) {
       .container {
         margin: 40px 20px;
