--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       position: relative;
     }
 
-    /* Capa negra encima del fondo */
     body::before {
       content: "";
       position: fixed;
@@ -26,7 +25,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.4); /* oscurece el fondo */
+      background-color: rgba(0, 0, 0, 0.4);
       z-index: 0;
     }
 
@@ -119,9 +118,8 @@
       }
 
       .logo {
-        width: 100px;
-        display: block;
-        margin: 20px auto 0;
+        width: 120px;
+        margin: 20px;
       }
 
       .container h1 {
