--- a/cuenta.html
+++ b/cuenta.html
@@ -161,7 +161,7 @@
       <a href="#">Cerrar sesión</a>
     </div>
     <!-- Imagen de perfil para versión móvil -->
-    <img class="profile-img" src="https://wallpapers.com/images/hd/netflix-profile-pictures-6bgwp0hfh7e4f1ap.jpg" alt="Perfil" onclick="toggleMenu()">
+    <img class="profile-img" src="https://wallpapers.com/images/high/netflix-profile-pictures-1000-x-1000-qo9h82134t9nv0j0.webp" alt="Perfil" onclick="toggleMenu()">
     <div class="mobile-menu" id="mobileMenu">
       <a href="#">Inicio</a>
       <a href="#">Mi cuenta</a>
@@ -173,8 +173,8 @@
   <div class="container">
     <h1>Mi cuenta</h1>
     <div class="info">
-      <p><strong>Nombre:</strong> Juliana Vargas</p>
-      <p><strong>Correo:</strong> juliana@email.com</p>
+      <p><strong>Nombre:</strong> Nombre Usuario</p>
+      <p><strong>Correo:</strong> Nombre@email.com</p>
       <p><strong>Plan actual:</strong> Básico</p>
       <p><strong>Próximo pago:</strong> 6 de julio de 2025</p>
       <p><strong>Miembro desde:</strong> junio de 2025</p>
