--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     }
 
     .logo {
-      width: 140px;
-      margin: 20px;
-      display: block;
-    }
+  width: 140px;
+  max-width: 100%;
+  margin: 20px;
+  display: block;
+}
 
     .container {
       background: rgba(0, 0, 0, 0.75);
