--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       }
 
       .logo {
-        width: 120px;
-        margin: 0 auto;
+        width: 140px;
+        margin: 20px;
         padding: 15px 20px;
       }
 
