--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
       }
 
       .logo {
-      width: 140px;
-    }
+        width: 160px;
+        margin: 0 auto;
+        padding: 15px 20px;
 
       .logo-wrapper {
         background-color: rgba(0, 0, 0, 0.8);
