--- a/Inicio.html
+++ b/Inicio.html
@@ -3,173 +3,211 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inicio - Usuario</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnH1zU7R9KZzXf/9zV1xR2z1+BhRQHDV9JHEN6H0PVFvXz5uErEo7xv5NkD9e8HnAw1s6iKhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Página de Inicio</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto', sans-serif;
       background-color: #000;
       color: #fff;
     }
 
-    .navbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 20px;
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    .navbar img.logo {
-      width: 100px;
-    }
-
-    .navbar .profile {
-      width: 35px;
-      height: 35px;
-      border-radius: 8px;
-      background-image: url('https://i.imgur.com/9QLXNMs.png');
-      background-size: cover;
-      background-position: center;
-    }
-
-    .hero {
-      position: relative;
-      background-image: url('https://i.imgur.com/dqYXzyE.jpeg');
-      background-size: cover;
-      background-position: center;
-      height: 75vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 40px;
-    }
-
-    .hero::after {
-      content: '';
-      position: absolute;
+    header {
+      position: fixed;
       top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
-      background: linear-gradient(to top, #000, transparent);
-      z-index: 1;
-    }
-
-    .hero-content {
-      position: relative;
-      z-index: 2;
-      max-width: 600px;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-    }
-
-    .hero p {
-      margin-top: 10px;
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-
-    .buttons {
-      margin-top: 20px;
+      z-index: 999;
       display: flex;
-      gap: 15px;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      transition: background-color 0.3s ease;
     }
 
-    .btn {
-      padding: 10px 20px;
-      font-size: 1rem;
+    header.transparent {
+      background-color: transparent;
+    }
+
+    header.scrolled {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .logo {
+      height: 30px;
+    }
+
+    .desktop-nav {
+      display: flex;
+      gap: 2rem;
+    }
+
+    .desktop-nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .mobile-menu-toggle {
+      display: none;
+      background: none;
       border: none;
-      border-radius: 5px;
+      font-size: 2rem;
+      color: #fff;
       cursor: pointer;
     }
 
-    .btn.play {
-      background-color: #fff;
-      color: #000;
+    .mobile-menu {
+      display: none;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 1rem;
+      border-radius: 8px;
     }
 
-    .btn.info {
-      background-color: rgba(109, 109, 110, 0.7);
+    .mobile-menu a {
+      display: block;
       color: #fff;
+      margin-bottom: 1rem;
+      text-decoration: none;
     }
 
-    .section-title {
-      font-size: 1.5rem;
-      margin: 30px 20px 10px;
+    .mobile-visible {
+      display: block !important;
     }
 
-    .slider {
+    .hero {
+      height: 100vh;
+      background: url('https://i.imgur.com/J4Gz7zD.jpeg') no-repeat center center/cover;
       display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 2rem;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      margin-bottom: 1rem;
+      text-shadow: 2px 2px 8px black;
+    }
+
+    .hero p {
+      max-width: 600px;
+      margin-bottom: 1.5rem;
+      text-shadow: 1px 1px 5px black;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .buttons button {
+      padding: 0.8rem 1.5rem;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .play { background-color: white; color: black; }
+    .info { background-color: rgba(109, 109, 110, 0.7); color: white; }
+
+    .carousel {
+      padding: 2rem;
       overflow-x: auto;
-      padding: 0 20px;
-      gap: 10px;
+      white-space: nowrap;
     }
 
-    .slider img {
-      width: 160px;
-      height: auto;
-      border-radius: 5px;
-      transition: transform 0.3s;
-    }
-
-    .slider img:hover {
-      transform: scale(1.05);
+    .carousel img {
+      height: 160px;
+      margin-right: 10px;
+      border-radius: 4px;
+      display: inline-block;
     }
 
     @media (max-width: 768px) {
-      .hero {
-        padding: 20px;
-        height: auto;
+      .desktop-nav {
+        display: none;
       }
-      .hero h1 {
-        font-size: 2rem;
+
+      .mobile-menu-toggle {
+        display: block;
       }
-      .hero p {
-        font-size: 1rem;
+    }
+
+    @media (min-width: 769px) {
+      .mobile-menu {
+        display: none !important;
+      }
+
+      .mobile-menu-toggle {
+        display: none;
       }
     }
   </style>
 </head>
 <body>
-  <div class="navbar">
-    <img class="logo" src="https://i.imgur.com/9QLXNMs.png" alt="Logo">
-    <div class="profile"></div>
-  </div>
 
-  <div class="hero">
-    <div class="hero-content">
-      <h1>Pearl</h1>
-      <p>En 1918, una chica de granja con un deseo incontrolable de fama arriesga todo por su oportunidad.</p>
-      <div class="buttons">
-        <button class="btn play"><i class="fas fa-play"></i> Reproducir</button>
-        <button class="btn info"><i class="fas fa-info-circle"></i> Más información</button>
-      </div>
+  <header id="main-header" class="transparent">
+    <img src="https://i.imgur.com/9QLXNMs.png" alt="Logo" class="logo" />
+
+    <!-- Menú escritorio -->
+    <nav class="desktop-nav">
+      <a href="#">Inicio</a>
+      <a href="#">Mi cuenta</a>
+      <a href="#">Mi plan</a>
+      <a href="#">Cerrar sesión</a>
+    </nav>
+
+    <!-- Botón hamburguesa móvil -->
+    <button class="mobile-menu-toggle" onclick="toggleMenu()">☰</button>
+
+    <!-- Menú móvil -->
+    <div class="mobile-menu" id="mobileMenu">
+      <a href="#">Inicio</a>
+      <a href="#">Mi cuenta</a>
+      <a href="#">Mi plan</a>
+      <a href="#">Cerrar sesión</a>
     </div>
-  </div>
+  </header>
 
-  <h2 class="section-title">Creemos que esto te encantará</h2>
-  <div class="slider">
-    <img src="https://i.imgur.com/F5wMnfP.png" alt="Serie 1">
-    <img src="https://i.imgur.com/vylQH88.png="Serie 2">
-    <img src="https://i.imgur.com/QA9TmRD.png" alt="Serie 3">
-    <img src="https://i.imgur.com/0wwqPld.jpeg" alt="Serie 4">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-    <img src="https://i.imgur.com/yZK3Ko1.jpeg" alt="Serie 5">
-  </div>
+  <section class="hero">
+    <h1>Pearl</h1>
+    <p>En 1918, una chica de Texas con un deseo de fama arriesga todo en busca de su oportunidad.</p>
+    <div class="buttons">
+      <button class="play">▶ Reproducir</button>
+      <button class="info">ℹ Más información</button>
+    </div>
+  </section>
+
+  <section class="carousel">
+    <h2>🎬 Recomendados para ti</h2>
+    <img src="https://i.imgur.com/F5wMnfP.png" />
+    <img src="https://i.imgur.com/vylQH88.png" />
+    <img src="https://i.imgur.com/QA9TmRD.png" />
+    <img src="https://i.imgur.com/2o1BmpI.png" />
+    <img src="https://i.imgur.com/MzptDGX.png" />
+    <img src="https://i.imgur.com/F5wMnfP.png" />
+    <img src="https://i.imgur.com/vylQH88.png" />
+    <img src="https://i.imgur.com/QA9TmRD.png" />
+    <img src="https://i.imgur.com/2o1BmpI.png" />
+    <img src="https://i.imgur.com/MzptDGX.png" />
+
+  </section>
+
+  <script>
+    const header = document.getElementById("main-header");
+    window.addEventListener("scroll", () => {
+      header.classList.toggle("scrolled", window.scrollY > 10);
+    });
+
+    function toggleMenu() {
+      const menu = document.getElementById("mobileMenu");
+      menu.classList.toggle("mobile-visible");
+    }
+  </script>
+
 </body>
 </html>
