--- a/Inicio.html
+++ b/Inicio.html
@@ -34,7 +34,7 @@
     }
 
     .logo {
-      height: 30px;
+      height: 50px;
     }
 
     .desktop-nav {
@@ -182,8 +182,9 @@
     </div>
   </section>
 
-  <section class="carousel">
-    <h2>🎬 Recomendados para ti</h2>
+  <section style="padding: 2rem;">
+  <h2 style="margin-bottom: 1rem;">🎬 Recomendados para ti</h2>
+  <div class="carousel">
     <img src="https://i.imgur.com/F5wMnfP.png" />
     <img src="https://i.imgur.com/vylQH88.png" />
     <img src="https://i.imgur.com/QA9TmRD.png" />
@@ -194,7 +195,6 @@
     <img src="https://i.imgur.com/QA9TmRD.png" />
     <img src="https://i.imgur.com/2o1BmpI.png" />
     <img src="https://i.imgur.com/MzptDGX.png" />
-
   </section>
 
   <script>
