--- a/Inicio.html
+++ b/Inicio.html
@@ -5,157 +5,170 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Página de Inicio</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
+  <!-- Dentro de <head>, sustituye tu estilo actual por este: -->
+<style>
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+  body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #000;
+    color: #fff;
+  }
 
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 999;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      transition: background-color 0.3s ease;
-    }
+  header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    transition: background-color 0.3s ease;
+  }
 
-    header.transparent {
-      background-color: transparent;
-    }
+  header.transparent {
+    background-color: transparent;
+  }
 
-    header.scrolled {
-      background-color: rgba(0, 0, 0, 0.7);
-    }
+  header.scrolled {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
 
-    .logo {
-      height: 50px;
-    }
+  .logo {
+    height: 50px;
+  }
 
+  .desktop-nav {
+    display: flex;
+    gap: 2rem;
+  }
+
+  .desktop-nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+  }
+
+  .mobile-menu-toggle {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100%;
+    width: 250px;
+    background-color: rgba(0, 0, 0, 0.95);
+    transition: right 0.3s ease;
+    padding: 2rem 1.5rem;
+    z-index: 1000;
+  }
+
+  .mobile-menu.open {
+    right: 0;
+  }
+
+  .mobile-menu img {
+    width: 60px;
+    height: 60px;
+    border-radius: 12px;
+    margin-bottom: 1rem;
+  }
+
+  .mobile-menu a {
+    display: block;
+    color: #fff;
+    margin-bottom: 1rem;
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  .hero {
+    height: 100vh;
+    background: url('https://i.imgur.com/J4Gz7zD.jpeg') no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 2rem;
+  }
+
+  .hero h1 {
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    text-shadow: 2px 2px 8px black;
+  }
+
+  .hero p {
+    max-width: 600px;
+    margin-bottom: 1.5rem;
+    text-shadow: 1px 1px 5px black;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .buttons button {
+    padding: 0.8rem 1.5rem;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .play { background-color: white; color: black; }
+  .info { background-color: rgba(109, 109, 110, 0.7); color: white; }
+
+  .carousel {
+    padding: 2rem;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+
+  .carousel img {
+    height: 160px;
+    margin-right: 10px;
+    border-radius: 4px;
+    display: inline-block;
+  }
+
+  /* Ocultar barra scroll solo en escritorio */
+  @media (min-width: 769px) {
+    .carousel {
+      scrollbar-width: none;
+    }
+    .carousel::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  @media (max-width: 768px) {
     .desktop-nav {
-      display: flex;
-      gap: 2rem;
+      display: none;
     }
 
-    .desktop-nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
+    .mobile-menu-toggle {
+      display: block;
+    }
+  }
+
+  @media (min-width: 769px) {
+    .mobile-menu {
+      display: none !important;
     }
 
     .mobile-menu-toggle {
       display: none;
-      background: none;
-      border: none;
-      font-size: 2rem;
-      color: #fff;
-      cursor: pointer;
     }
+  }
+</style>
 
-    .mobile-menu {
-      display: none;
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      background-color: rgba(0, 0, 0, 0.9);
-      padding: 1rem;
-      border-radius: 8px;
-    }
-
-    .mobile-menu a {
-      display: block;
-      color: #fff;
-      margin-bottom: 1rem;
-      text-decoration: none;
-    }
-
-    .mobile-visible {
-      display: block !important;
-    }
-
-    .hero {
-      height: 100vh;
-      background: url('https://i.imgur.com/J4Gz7zD.jpeg') no-repeat center center/cover;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      padding: 2rem;
-    }
-
-    .hero h1 {
-      font-size: 4rem;
-      margin-bottom: 1rem;
-      text-shadow: 2px 2px 8px black;
-    }
-
-    .hero p {
-      max-width: 600px;
-      margin-bottom: 1.5rem;
-      text-shadow: 1px 1px 5px black;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 1rem;
-    }
-
-    .buttons button {
-      padding: 0.8rem 1.5rem;
-      border: none;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .play { background-color: white; color: black; }
-    .info { background-color: rgba(109, 109, 110, 0.7); color: white; }
-
-    .carousel {
-      padding: 2rem;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-
-    .carousel img {
-      height: 160px;
-      margin-right: 10px;
-      border-radius: 4px;
-      display: inline-block;
-    }
-
- /* Ocultar barra scroll solo en escritorio */
-    @media (min-width: 769px) {
-      .carousel {
-        scrollbar-width: none; /* Firefox */
-      }
-      .carousel::-webkit-scrollbar {
-        display: none; /* Chrome, Safari */
-         }
-    }
-    @media (max-width: 768px) {
-      .desktop-nav {
-        display: none;
-      }
-
-      .mobile-menu-toggle {
-        display: block;
-      }
-    }
-
-    @media (min-width: 769px) {
-      .mobile-menu {
-        display: none !important;
-      }
-
-      .mobile-menu-toggle {
-        display: none;
-      }
-    }
-  </style>
 </head>
 <body>
 
