--- a/cuenta.html
+++ b/cuenta.html
@@ -3,52 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Página de Inicio</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <title>Mi Cuenta - Marketflix</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #000;
-      color: #fff;
+    * {
+      box-sizing: border-box;
     }
 
-    header {
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #000 url('https://i.imgur.com/Mk4QP26.png') center/cover no-repeat;
+      color: #fff;
+      min-height: 100vh;
+      position: relative;
+    }
+
+    body::before {
+      content: "";
       position: fixed;
       top: 0;
+      left: 0;
       width: 100%;
-      z-index: 999;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 0;
+    }
+
+    nav {
+      background: rgba(0, 0, 0, 0.85);
+      padding: 10px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem;
-      transition: background-color 0.3s ease;
-    }
-
-    header.transparent {
-      background-color: transparent;
-    }
-
-    header.scrolled {
-      background-color: rgba(0, 0, 0, 0.7);
+      position: relative;
+      z-index: 1;
     }
 
     .logo {
-      height: 50px;
+      width: 140px;
     }
 
-    .desktop-nav {
+    .nav-links {
       display: flex;
-      gap: 2rem;
+      gap: 20px;
     }
 
-    .desktop-nav a {
+    .nav-links a {
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
+      font-size: 15px;
     }
 
-    /* Imagen de perfil en móvil */
+    .nav-links a:hover {
+      color: #e50914;
+    }
+
     .profile-img {
       display: none;
       width: 40px;
@@ -58,17 +67,18 @@
       cursor: pointer;
     }
 
+    /* Menú desplegable en móvil */
     .mobile-menu {
       display: none;
       flex-direction: column;
       gap: 10px;
       background: rgba(0, 0, 0, 0.9);
       position: absolute;
-      top: 70px;
+      top: 60px;
       right: 30px;
       padding: 15px;
       border-radius: 6px;
-      z-index: 1000;
+      z-index: 10;
     }
 
     .mobile-menu a {
@@ -81,80 +91,56 @@
       color: #e50914;
     }
 
-    .hero {
-      height: 100vh;
-      background: url('https://i.imgur.com/J4Gz7zD.jpeg') no-repeat center center/cover;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      padding: 2rem;
-    }
-
-    .hero h1 {
-      font-size: 4rem;
-      margin-bottom: 1rem;
-      text-shadow: 2px 2px 8px black;
-    }
-
-    .hero p {
+    .container {
       max-width: 600px;
-      margin-bottom: 1.5rem;
-      text-shadow: 1px 1px 5px black;
+      margin: 60px auto;
+      padding: 30px;
+      background: rgba(0, 0, 0, 0.75);
+      border-radius: 6px;
+      position: relative;
+      z-index: 1;
     }
 
-    .buttons {
-      display: flex;
-      gap: 1rem;
+    h1 {
+      font-size: 26px;
+      margin-bottom: 20px;
+      text-align: center;
     }
 
-    .buttons button {
-      padding: 0.8rem 1.5rem;
-      border: none;
-      font-weight: bold;
-      cursor: pointer;
+    .info p {
+      margin: 10px 0;
+      font-size: 16px;
     }
 
-    .play { background-color: white; color: black; }
-    .info { background-color: rgba(109, 109, 110, 0.7); color: white; }
-
-    .carousel {
-      padding: 2rem;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-
-    .carousel img {
-      height: 160px;
-      margin-right: 10px;
-      border-radius: 4px;
+    .info strong {
+      color: #b3b3b3;
       display: inline-block;
+      width: 140px;
     }
 
-    h2 {
-      margin: 2rem 2rem 1rem;
+    .actions {
+      margin-top: 30px;
+      text-align: center;
     }
 
-    /* Ocultar scroll solo en escritorio */
-    @media (min-width: 769px) {
-      .carousel {
-        scrollbar-width: none;
-      }
-
-      .carousel::-webkit-scrollbar {
-        display: none;
-      }
-
-      .mobile-menu {
-        display: none !important;
-      }
-
-      .profile-img {
-        display: none;
-      }
+    .actions a {
+      display: inline-block;
+      margin: 10px 10px 0 10px;
+      padding: 12px 20px;
+      background: #e50914;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+      font-size: 15px;
     }
 
-    @media (max-width: 768px) {
-      .desktop-nav {
+    .actions a.secondary {
+      background: #333;
+    }
+
+    @media (max-width: 600px) {
+      .nav-links {
         display: none;
       }
 
@@ -166,60 +152,42 @@
 </head>
 <body>
 
-  <header id="main-header" class="transparent">
-    <img src="https://i.imgur.com/9QLXNMs.png" alt="Logo" class="logo" />
-
-    <!-- Menú escritorio -->
-    <nav class="desktop-nav">
+  <nav>
+    <img class="logo" src="https://i.imgur.com/9QLXNMs.png" alt="Marketflix logo">
+    <div class="nav-links">
       <a href="#">Inicio</a>
       <a href="#">Mi cuenta</a>
       <a href="#">Mi plan</a>
       <a href="#">Cerrar sesión</a>
-    </nav>
-
-    <!-- Imagen de perfil en móvil -->
+    </div>
+    <!-- Imagen de perfil para versión móvil -->
     <img class="profile-img" src="https://wallpapers.com/images/high/netflix-profile-pictures-1000-x-1000-qo9h82134t9nv0j0.webp" alt="Perfil" onclick="toggleMenu()">
-
-    <!-- Menú móvil -->
     <div class="mobile-menu" id="mobileMenu">
       <a href="#">Inicio</a>
       <a href="#">Mi cuenta</a>
       <a href="#">Mi plan</a>
       <a href="#">Cerrar sesión</a>
     </div>
-  </header>
+  </nav>
 
-  <section class="hero">
-    <h1>Pearl</h1>
-    <p>En 1918, una chica de Texas con un deseo de fama arriesga todo en busca de su oportunidad.</p>
-    <div class="buttons">
-      <button class="play">▶ Reproducir</button>
-      <button class="info">ℹ Más información</button>
+  <div class="container">
+    <h1>Mi cuenta</h1>
+    <div class="info">
+      <p><strong>Nombre:</strong> Nombre Usuario</p>
+      <p><strong>Correo:</strong> Nombre@email.com</p>
+      <p><strong>Plan actual:</strong> Básico</p>
+      <p><strong>Próximo pago:</strong> 6 de julio de 2025</p>
+      <p><strong>Miembro desde:</strong> junio de 2025</p>
     </div>
-  </section>
 
-  <section>
-    <h2>🎬 Recomendados para ti</h2>
-    <div class="carousel">
-      <img src="https://i.imgur.com/F5wMnfP.png" />
-      <img src="https://i.imgur.com/vylQH88.png" />
-      <img src="https://i.imgur.com/QA9TmRD.png" />
-      <img src="https://i.imgur.com/2o1BmpI.png" />
-      <img src="https://i.imgur.com/MzptDGX.png" />
-      <img src="https://i.imgur.com/F5wMnfP.png" />
-      <img src="https://i.imgur.com/vylQH88.png" />
-      <img src="https://i.imgur.com/QA9TmRD.png" />
-      <img src="https://i.imgur.com/2o1BmpI.png" />
-      <img src="https://i.imgur.com/MzptDGX.png" />
+    <div class="actions">
+      <a href="#">Cambiar de plan</a>
+      <a href="#">Cambiar datos</a>
+      <a href="#" class="secondary">Cerrar sesión</a>
     </div>
-  </section>
+  </div>
 
   <script>
-    const header = document.getElementById("main-header");
-    window.addEventListener("scroll", () => {
-      header.classList.toggle("scrolled", window.scrollY > 10);
-    });
-
     function toggleMenu() {
       const menu = document.getElementById("mobileMenu");
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
