--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <form>
       <input class="input-field" type="email" placeholder="Correo o número de teléfono" required>
       <input class="input-field" type="password" placeholder="Contraseña" required>
-      <button class="signin-btn" onclick="window.location.href='https://arxperience.github.io/Marketflix/cuenta.html'" type="submit">Entrar</button>
+      <button class="signin-btn" onclick="window.location.href='https://arxperience.github.io/Marketflix/Inicio.html'" type="submit">Entrar</button>
       <div class="options">
         <label><input type="checkbox"> Recuérdame</label>
         <a href="#">¿Necesitas ayuda?</a>
