--- a/Inicio.html
+++ b/Inicio.html
@@ -172,7 +172,7 @@
     <!-- Menú escritorio -->
     <nav class="desktop-nav">
       <a href="#">Inicio</a>
-      <a href="#">Mi cuenta</a>
+      <a href="#">Mi cuenta</a> 
       <a href="#">Mi plan</a>
       <a href="#">Cerrar sesión</a>
     </nav>
@@ -183,7 +183,7 @@
     <!-- Menú móvil -->
     <div class="mobile-menu" id="mobileMenu">
       <a href="#">Inicio</a>
-      <a href="#">Mi cuenta</a>
+      <a href="#">Mi cuenta</a> 
       <a href="#">Mi plan</a>
       <a href="#">Cerrar sesión</a>
     </div>
@@ -193,7 +193,7 @@
     <h1>Pearl</h1>
     <p>En 1918, una chica de Texas con un deseo de fama arriesga todo en busca de su oportunidad.</p>
     <div class="buttons">
-      <button class="play">▶ Reproducir</button>
+      <button class="play" onclick="window.location.href='https://arxperience.github.io/Marketflix/curso.html'" >▶ Reproducir</button> 
       <button class="info">ℹ Más información</button>
     </div>
   </section>
