--- a/Inicio.html
+++ b/Inicio.html
@@ -171,9 +171,9 @@
 
     <!-- Menú escritorio -->
     <nav class="desktop-nav">
-      <a href="#">Inicio</a>
-      <a href="#">Mi cuenta</a> 
-      <a href="#">Mi plan</a>
+      <a href="#"onclick="window.location.href='https://arxperience.github.io/Marketflix/Inicio.html'">Inicio</a>
+      <a href="#"onclick="window.location.href='https://arxperience.github.io/Marketflix/cuenta.html'">Mi cuenta</a> 
+      <a href="#" >Mi plan</a>
       <a href="#">Cerrar sesión</a>
     </nav>
 
@@ -182,16 +182,16 @@
 
     <!-- Menú móvil -->
     <div class="mobile-menu" id="mobileMenu">
-      <a href="#">Inicio</a>
-      <a href="#">Mi cuenta</a> 
+      <a href="#"onclick="window.location.href='https://arxperience.github.io/Marketflix/Inicio.html'">Inicio</a>
+      <a href="#"onclick="window.location.href='https://arxperience.github.io/Marketflix/cuenta.html'">Mi cuenta</a> 
       <a href="#">Mi plan</a>
       <a href="#">Cerrar sesión</a>
     </div>
   </header>
 
   <section class="hero">
-    <h1>Pearl</h1>
-    <p>En 1918, una chica de Texas con un deseo de fama arriesga todo en busca de su oportunidad.</p>
+    <h1>Marketing con IA</h1>
+    <p>Aprende a usar la inteligencia artificial (IA) para optimizar tus estrategias de marketing con el curso de IA para Marketing de Marketflix University.</p>
     <div class="buttons">
       <button class="play" onclick="window.location.href='https://arxperience.github.io/Marketflix/curso.html'" >▶ Reproducir</button> 
       <button class="info">ℹ Más información</button>
