--- a/Inicio.html
+++ b/Inicio.html
@@ -200,7 +200,7 @@
 
   <section class="hero">
     <video autoplay muted loop playsinline class="hero-video">
-      <source src="Curso1.mp4" type="video/mp4">
+      <source src="assets/Curso1.mp4" type="video/mp4">
       Tu navegador no soporta videos HTML5.
     </video>
     <div class="hero-content">
