--- a/Inicio.html
+++ b/Inicio.html
@@ -240,6 +240,24 @@
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     }
   </script>
+<script>
+  // Bloquea clic derecho
+  document.addEventListener("contextmenu", function(e){
+    e.preventDefault();
+  });
+
+  // Bloquea teclas comunes para inspección
+  document.addEventListener("keydown", function(e) {
+    if (
+      e.keyCode === 123 || // F12
+      (e.ctrlKey && e.shiftKey && e.keyCode === 73) || // Ctrl+Shift+I
+      (e.ctrlKey && e.shiftKey && e.keyCode === 74) || // Ctrl+Shift+J
+      (e.ctrlKey && e.keyCode === 85) // Ctrl+U
+    ) {
+      e.preventDefault();
+    }
+  });
+</script>
 
 </body>
 </html>
