--- a/index.html
+++ b/index.html
@@ -167,5 +167,24 @@
       Esta página está protegida por Google reCAPTCHA para asegurarnos de que no eres un robot. <a href="#">Más información</a>.
     </div>
   </div>
+<script>
+  // Bloquea clic derecho
+  document.addEventListener("contextmenu", function(e){
+    e.preventDefault();
+  });
+
+  // Bloquea teclas comunes para inspección
+  document.addEventListener("keydown", function(e) {
+    if (
+      e.keyCode === 123 || // F12
+      (e.ctrlKey && e.shiftKey && e.keyCode === 73) || // Ctrl+Shift+I
+      (e.ctrlKey && e.shiftKey && e.keyCode === 74) || // Ctrl+Shift+J
+      (e.ctrlKey && e.keyCode === 85) // Ctrl+U
+    ) {
+      e.preventDefault();
+    }
+  });
+</script>
+
 </body>
 </html>
